--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/script.js"></script>
     <link rel="stylesheet" href="style.css" />
-
-    <title>Iniciar sesión</title>
+    <link rel="icon" href="/icons/11178407801659281604.svg">
+    <title>SGI|Rapi Burger</title>
   </head>
 
   <body>
@@ -25,14 +25,16 @@
             <span class="span"><a href="about:blank">Click aquí</a></span>
           </p>
           <button id="btn-iniciarSesion" class="btn" target="_blank">
-            Iniciar sesión
+            <a id="click-iniciarSesion" href="/dashboard.html"
+              >Iniciar sesión</a
+            >
           </button>
           <p>
             No tienes una cuenta?
             <span class="span"><a href="about:blank">Solicita una</a> </span>
           </p>
-          <br>
-          <p>Instituto Superior Tecnológico 'Japón'</p>
+          <br />
+          <p>© Instituto Superior Tecnológico 'Japón'</p>
         </form>
       </div>
       <img class="image-container" src="images/login.svg" alt="" />
