--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               >Iniciar sesión</a>
           </button>
           <p>
-            No tienes una cuenta?
+            ¿No tienes una cuenta?
             <span class="span"><a href="about:blank">Solicita una</a> </span>
           </p>
           <br />
