--- a/index.html
+++ b/index.html
@@ -73,4 +73,6 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"
   ></script>
+    <!--FUNCION MOSTRAR PASSWORD-->
+  <script src="/script/showPassword.js"></script>
 </html>
