--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 placeholder="Contraseña"
                 required
               />
+              <input type="checkbox" onclick="showPassword()" /> Mostrar
+              contraseña
               <div class="checkbox mt-2">
                 <label for="">
                   <input type="checkbox" name="" id="" value="remember-me" />
