--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
                 class="mt-0 rounded-3 form-control"
                 type="password"
                 name="password"
-                id="passwordlabel"
+                id="password"
                 placeholder="Contraseña"
                 required
               />
+              <input type="checkbox" onclick="showPassword()" /> Mostrar
+              contraseña
               <div class="checkbox mt-2">
                 <label for="">
                   <input type="checkbox" name="" id="" value="remember-me" />
