ADD CAPSLOCK WARNING

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 placeholder="Contraseña"
                 required
               />
-              <input type="checkbox" onclick="showPassword()" /> Mostrar
+              <p class="message mt-1"id="message"></p>
+              <input class="mt-1"type="checkbox" onclick="showPassword()" /> Mostrar
               contraseña
               <div class="checkbox mt-2">
                 <label for="">
@@ -77,4 +78,5 @@
   ></script>
     <!--FUNCION MOSTRAR PASSWORD-->
   <script src="/script/showPassword.js"></script>
+  <script src="/script/script.js"></script>
 </html>
