--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                   </label>
                 </div>
                 <div class="mt-3">
-                  <button class="btn main-button rounded-3">INICIAR SESIÓN</button>
+                  <button class="btn main-button rounded-3">
+                    INICIAR SESIÓN
+                  </button>
                 </div>
                 <p class="mt-3">© Instituto Superior Tecnológico 'Japón'</p>
               </form>
